--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.15.3",
     "sequelize": "^4.0.0",
     "sequelize-cli": "^2.7.0",
+    "sqlite3": "^3.1.8",
     "underscore": "^1.8.3"
   }
 }
