--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "sequelize-cli": "^2.7.0",
     "sqlite3": "^3.1.8",
     "underscore": "^1.8.3"
+  },
+  "devDependencies": {
+  "chai": "^4.0.2",
+  "mocha": "*"
   }
 }
