--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "async": "^2.4.1",
+    "body-parser": "^1.17.2",
     "commander": "^2.9.0",
     "express": "^4.15.3",
     "sequelize": "^4.0.0",
@@ -25,7 +26,7 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-  "chai": "^4.0.2",
-  "mocha": "*"
+    "chai": "^4.0.2",
+    "mocha": "*"
   }
 }
