--- a/package.json
+++ b/package.json
@@ -1,32 +1,17 @@
 {
   "name": "solarbeeriot",
-  "version": "1.0.0",
-  "description": "IOT server and bridge for Solar Powered Beer!",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "keywords": [
-    "IOT",
-    "bridge",
-    "gateway",
-    "server",
-    "contiki"
-  ],
-  "author": "J Disser",
-  "license": "MIT",
   "dependencies": {
-    "async": "^2.4.1",
-    "body-parser": "^1.17.2",
-    "commander": "^2.9.0",
-    "express": "^4.15.3",
-    "sequelize": "^4.0.0",
-    "sequelize-cli": "^2.7.0",
-    "sqlite3": "^3.1.8",
-    "underscore": "^1.8.3"
-  },
-  "devDependencies": {
-    "chai": "^4.0.2",
-    "mocha": "*"
+    "body-parser": "~1.17.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.3",
+    "ejs": "~2.5.6",
+    "express": "~4.15.2",
+    "morgan": "~1.8.1",
+    "serve-favicon": "~2.4.2"
   }
 }
