--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
   "dependencies": {
     "async": "^2.4.1",
     "body-parser": "^1.17.2",
-    "cookie-parser": "~1.4.3",
     "commander": "^2.9.0",
+    "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
-    "express": "^4.15.3",
     "ejs": "~2.5.6",
+    "ejs-mate": "^2.3.0",
+    "express": "^4.15.3",
     "morgan": "~1.8.1",
     "sequelize": "^4.0.0",
     "sequelize-cli": "^2.7.0",
@@ -36,4 +37,3 @@
     "mocha": "*"
   }
 }
-
